@@ -1,3 +1,9 @@
+8/18/05 (trilliwig)
+  * Updated Perl script to properly handle the knowndiv option from the
+    .poly file when checking if sqrt has found all the prime divisors of N.
+  * Removed include/version.h from repository.  A 'make' from the top-level
+    directory should recreate it.
+
 8/17/05 (asl)
   * Fixed mingw32 miscompilation.
 
